# scout_mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  SECURITY.md  coverage.json  fastmcp.json  pyproject.toml
.beads/: .gitignore  issues.jsonl
.docs/: COMPREHENSIVE-CODEBASE-REVIEW-2025-12-09.md  COMPREHENSIVE-REVIEW-2025-12-07.md  COMPREHENSIVE-REVIEW-SUMMARY.md  README-CICD-REVIEW.md  README-COMPREHENSIVE-REVIEW.md  README.md  REVIEW-QUICK-REFERENCE.md  TESTING_EVALUATION.md  TESTING_SUMMARY.md  cicd-devops-review-summary.md  code-quality-review-2025-12-07.md  code-review-task2-docker-validation.md  code-review-task4-e2e-tests.md  dependency-security-report.md  deployment-log.md  documentation-audit-2025-12-07.md  documentation-audit-summary.md  documentation-executive-summary.md  documentation-priorities.md  documentation-review-2025-11-28.md  performance-analysis.md  performance-summary.md  security-audit-2025-12-07.md  security-audit-summary.md  security-executive-summary.md  security-hardening-plan.md  security-remediation-plan.md  task3-implementation-verification.md
docs/: CICD-AND-DEVOPS-REVIEW.md  CICD-QUICK-REFERENCE.md  DEPLOYMENT.md  INTERACTIVE-NAVIGATION.md  MCP-UI-ERROR-HANDLING.md  MCP-UI-TESTING.md  MCP-UI.md  TESTING.md  phase1-testing-implementation.md  testing-evaluation.md  testing-quick-reference.md  testing-summary.md
scout_mcp/: CLAUDE.md  __init__.py  __main__.py  config.py  dependencies.py  executors.py  pool.py  protocols.py  scout.py  server.py
tests/: test_beam_integration.py  test_beam_remote_to_remote_integration.py  test_config.py  test_config_legacy.py  test_config_security.py  test_connection.py  test_dependencies.py  test_executors.py  test_health.py  test_integration.py  test_integration_ui.py  test_main.py  test_module_structure.py  test_ping.py  test_pool.py  test_pool_concurrency.py  test_pool_limits.py  test_protocols.py  test_scout.py  test_security.py  test_server_lifespan.py  test_ui_error_handling.py  test_validation.py
(+205 files in other folders)
