[project]
name = "scout_mcp"
version = "0.1.0"
description = "MCP server for remote file operations via SSH"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "asyncssh>=2.14.2,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scout_mcp"]

[tool.ruff]
line-length = 88
target-version = "py311"
cache-dir = ".cache/.ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
cache_dir = ".cache/.mypy_cache"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
cache_dir = ".cache/.pytest_cache"

[tool.coverage.run]
data_file = ".cache/.coverage"

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.7",
]
